src/antlr/LatteParser.py
# Generated from Latte.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LatteParser ( Parser ):

    grammarFileName = "Latte.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'{'", "'}'", "';'", 
                     "'='", "'++'", "'--'", "'return'", "'if'", "'else'", 
                     "'while'", "'int'", "'string'", "'boolean'", "'void'", 
                     "'-'", "'!'", "'&&'", "'||'", "'true'", "'false'", 
                     "'+'", "'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMMENT", "MULTICOMMENT", 
                      "INT", "ID", "WS", "STR" ]

    RULE_program = 0
    RULE_topDef = 1
    RULE_arg = 2
    RULE_block = 3
    RULE_stmt = 4
    RULE_type_ = 5
    RULE_item = 6
    RULE_expr = 7
    RULE_addOp = 8
    RULE_mulOp = 9
    RULE_relOp = 10

    ruleNames =  [ "program", "topDef", "arg", "block", "stmt", "type_", 
                   "item", "expr", "addOp", "mulOp", "relOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    COMMENT=34
    MULTICOMMENT=35
    INT=36
    ID=37
    WS=38
    STR=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def topDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.TopDefContext)
            else:
                return self.getTypedRuleContext(LatteParser.TopDefContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LatteParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 22
                self.topDef()
                self.state = 25 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__13) | (1 << LatteParser.T__14) | (1 << LatteParser.T__15) | (1 << LatteParser.T__16))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)


        def ID(self):
            return self.getToken(LatteParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(LatteParser.BlockContext,0)


        def arg(self):
            return self.getTypedRuleContext(LatteParser.ArgContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_topDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopDef" ):
                listener.enterTopDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopDef" ):
                listener.exitTopDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopDef" ):
                return visitor.visitTopDef(self)
            else:
                return visitor.visitChildren(self)




    def topDef(self):

        localctx = LatteParser.TopDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.type_()
            self.state = 28
            self.match(LatteParser.ID)
            self.state = 29
            self.match(LatteParser.T__0)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__13) | (1 << LatteParser.T__14) | (1 << LatteParser.T__15) | (1 << LatteParser.T__16))) != 0):
                self.state = 30
                self.arg()


            self.state = 33
            self.match(LatteParser.T__1)
            self.state = 34
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.Type_Context)
            else:
                return self.getTypedRuleContext(LatteParser.Type_Context,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.ID)
            else:
                return self.getToken(LatteParser.ID, i)

        def getRuleIndex(self):
            return LatteParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = LatteParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.type_()
            self.state = 37
            self.match(LatteParser.ID)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LatteParser.T__2:
                self.state = 38
                self.match(LatteParser.T__2)
                self.state = 39
                self.type_()
                self.state = 40
                self.match(LatteParser.ID)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StmtContext)
            else:
                return self.getTypedRuleContext(LatteParser.StmtContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LatteParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(LatteParser.T__3)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__0) | (1 << LatteParser.T__3) | (1 << LatteParser.T__5) | (1 << LatteParser.T__9) | (1 << LatteParser.T__10) | (1 << LatteParser.T__12) | (1 << LatteParser.T__13) | (1 << LatteParser.T__14) | (1 << LatteParser.T__15) | (1 << LatteParser.T__16) | (1 << LatteParser.T__17) | (1 << LatteParser.T__18) | (1 << LatteParser.T__21) | (1 << LatteParser.T__22) | (1 << LatteParser.INT) | (1 << LatteParser.ID) | (1 << LatteParser.STR))) != 0):
                self.state = 48
                self.stmt()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(LatteParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAss" ):
                listener.enterAss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAss" ):
                listener.exitAss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAss" ):
                return visitor.visitAss(self)
            else:
                return visitor.visitChildren(self)


    class DecrContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecr" ):
                listener.enterDecr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecr" ):
                listener.exitDecr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecr" ):
                return visitor.visitDecr(self)
            else:
                return visitor.visitChildren(self)


    class RetContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet" ):
                listener.enterRet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet" ):
                listener.exitRet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRet" ):
                return visitor.visitRet(self)
            else:
                return visitor.visitChildren(self)


    class EmptyContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmpty" ):
                listener.enterEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmpty" ):
                listener.exitEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmpty" ):
                return visitor.visitEmpty(self)
            else:
                return visitor.visitChildren(self)


    class CondContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.cond = None # ExprContext
            self.sTrue = None # StmtContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self):
            return self.getTypedRuleContext(LatteParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)


    class CondElseContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.cond = None # ExprContext
            self.sTrue = None # StmtContext
            self.sFlase = None # StmtContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StmtContext)
            else:
                return self.getTypedRuleContext(LatteParser.StmtContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondElse" ):
                listener.enterCondElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondElse" ):
                listener.exitCondElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondElse" ):
                return visitor.visitCondElse(self)
            else:
                return visitor.visitChildren(self)


    class VRetContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVRet" ):
                listener.enterVRet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVRet" ):
                listener.exitVRet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVRet" ):
                return visitor.visitVRet(self)
            else:
                return visitor.visitChildren(self)


    class IncrContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncr" ):
                listener.enterIncr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncr" ):
                listener.exitIncr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncr" ):
                return visitor.visitIncr(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(LatteParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class DeclContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(LatteParser.Type_Context,0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ItemContext)
            else:
                return self.getTypedRuleContext(LatteParser.ItemContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.cond = None # ExprContext
            self.copyFrom(ctx)

        def stmt(self):
            return self.getTypedRuleContext(LatteParser.StmtContext,0)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class SExpContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSExp" ):
                listener.enterSExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSExp" ):
                listener.exitSExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSExp" ):
                return visitor.visitSExp(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = LatteParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = LatteParser.EmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(LatteParser.T__5)
                pass

            elif la_ == 2:
                localctx = LatteParser.BlockStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.block()
                pass

            elif la_ == 3:
                localctx = LatteParser.DeclContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.type_()
                self.state = 59
                self.item()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LatteParser.T__2:
                    self.state = 60
                    self.match(LatteParser.T__2)
                    self.state = 61
                    self.item()
                    self.state = 66
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 67
                self.match(LatteParser.T__5)
                pass

            elif la_ == 4:
                localctx = LatteParser.AssContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.match(LatteParser.ID)
                self.state = 70
                self.match(LatteParser.T__6)
                self.state = 71
                self.expr(0)
                self.state = 72
                self.match(LatteParser.T__5)
                pass

            elif la_ == 5:
                localctx = LatteParser.IncrContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.match(LatteParser.ID)
                self.state = 75
                self.match(LatteParser.T__7)
                self.state = 76
                self.match(LatteParser.T__5)
                pass

            elif la_ == 6:
                localctx = LatteParser.DecrContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                self.match(LatteParser.ID)
                self.state = 78
                self.match(LatteParser.T__8)
                self.state = 79
                self.match(LatteParser.T__5)
                pass

            elif la_ == 7:
                localctx = LatteParser.RetContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 80
                self.match(LatteParser.T__9)
                self.state = 81
                self.expr(0)
                self.state = 82
                self.match(LatteParser.T__5)
                pass

            elif la_ == 8:
                localctx = LatteParser.VRetContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 84
                self.match(LatteParser.T__9)
                self.state = 85
                self.match(LatteParser.T__5)
                pass

            elif la_ == 9:
                localctx = LatteParser.CondContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 86
                self.match(LatteParser.T__10)
                self.state = 87
                self.match(LatteParser.T__0)
                self.state = 88
                localctx.cond = self.expr(0)
                self.state = 89
                self.match(LatteParser.T__1)
                self.state = 90
                localctx.sTrue = self.stmt()
                pass

            elif la_ == 10:
                localctx = LatteParser.CondElseContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 92
                self.match(LatteParser.T__10)
                self.state = 93
                self.match(LatteParser.T__0)
                self.state = 94
                localctx.cond = self.expr(0)
                self.state = 95
                self.match(LatteParser.T__1)
                self.state = 96
                localctx.sTrue = self.stmt()
                self.state = 97
                self.match(LatteParser.T__11)
                self.state = 98
                localctx.sFlase = self.stmt()
                pass

            elif la_ == 11:
                localctx = LatteParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 100
                self.match(LatteParser.T__12)
                self.state = 101
                self.match(LatteParser.T__0)
                self.state = 102
                localctx.cond = self.expr(0)
                self.state = 103
                self.match(LatteParser.T__1)
                self.state = 104
                self.stmt()
                pass

            elif la_ == 12:
                localctx = LatteParser.SExpContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 106
                self.expr(0)
                self.state = 107
                self.match(LatteParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_type_

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StrContext(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStr" ):
                listener.enterStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStr" ):
                listener.exitStr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStr" ):
                return visitor.visitStr(self)
            else:
                return visitor.visitChildren(self)


    class BoolContext(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)


    class VoidContext(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVoid" ):
                listener.enterVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVoid" ):
                listener.exitVoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVoid" ):
                return visitor.visitVoid(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)



    def type_(self):

        localctx = LatteParser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LatteParser.T__13]:
                localctx = LatteParser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(LatteParser.T__13)
                pass
            elif token in [LatteParser.T__14]:
                localctx = LatteParser.StrContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(LatteParser.T__14)
                pass
            elif token in [LatteParser.T__15]:
                localctx = LatteParser.BoolContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(LatteParser.T__15)
                pass
            elif token in [LatteParser.T__16]:
                localctx = LatteParser.VoidContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(LatteParser.T__16)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LatteParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(LatteParser.ExprContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem" ):
                listener.enterItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem" ):
                listener.exitItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = LatteParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_item)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(LatteParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(LatteParser.ID)
                self.state = 119
                self.match(LatteParser.T__6)
                self.state = 120
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LatteParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class EIdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LatteParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LatteParser.ID, 0)
